--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    apply from: "../gradle/repo-config.gradle", to: buildscript
+    apply from: "${rootDir}/../gradle/repo-config.gradle", to: buildscript
 
     // Dependencies for non-core plugins
     // Note: These dependencies must reside in a buildscript block that is *not* within a script plugin
@@ -20,9 +20,13 @@ buildscript {
     }
 }
 
-apply from: "../gradle/plugins-config.gradle"
-apply from: "../gradle/plugins-sonarqube-config.gradle"
-apply from: "../gradle/build-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-java-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-docker-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-jacoco-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-maven-publish-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-spring-boot-config.gradle"
+apply from: "${rootDir}/../gradle/build-config.gradle"
 
 dependencyManagement {
     imports {
