--- a/thule-cloud/build.gradle
+++ b/thule-cloud/build.gradle
@@ -26,6 +26,7 @@ apply from: "${rootDir}/../gradle/plugin-jacoco-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-maven-publish-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-spring-boot-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-versions-config.gradle"
 apply from: "${rootDir}/../gradle/build-config.gradle"
 
 bootRepackage.enabled = false // Don't need an "über-jar" but still want the rest of the spring boot plugin
