--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -5,8 +5,6 @@ buildscript {
     // Note: These dependencies must reside in a buildscript block that is *not* within a script plugin
     // see https://github.com/gradle/gradle/issues/1894
     dependencies {
-        classpath("com.github.ben-manes:gradle-versions-plugin:0.17.0")
-        classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5")
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
         classpath("se.transmode.gradle:gradle-docker:1.2")
         classpath("uk.co.serin.gradle.plugins:sonarqube-build-breaker-plugin:1.0.0-SNAPSHOT") {
@@ -20,11 +18,19 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.sonarqube" version "2.5"
+    id "com.github.ben-manes.versions" version "0.17.0" apply false
+}
 apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
-apply from: "${rootDir}/../gradle/plugin-versions-config.gradle"
 
 subprojects {
-    apply from: "${rootDir}/../gradle/plugin-java-config.gradle"
+    apply plugin: "com.github.ben-manes.versions"
+    apply plugin: "jacoco"
+    apply plugin: "java"
+    apply plugin: "maven-publish"
+    apply plugin: "org.springframework.boot"
+apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
     apply from: "${rootDir}/../gradle/plugin-jacoco-config.gradle"
     apply from: "${rootDir}/../gradle/plugin-maven-publish-config.gradle"
     apply from: "${rootDir}/../gradle/plugin-spring-boot-config.gradle"
