--- a/thule-discovery-service/build.gradle
+++ b/thule-discovery-service/build.gradle
@@ -24,6 +24,7 @@ apply plugin: "docker"
 apply plugin: "org.springframework.boot"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
+// Standard Serin gradle plugin config
 apply from: "${rootDir}/../gradle/plugin-docker-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-jacoco-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-maven-publish-config.gradle"
@@ -31,6 +32,7 @@ apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-spring-boot-config.gradle"
 apply from: "${rootDir}/../gradle/build-config.gradle"
 
+// Non-standard Serin gradle plugin config
 // Required for Java9
 //    tasks.withType(Test) {
 //        jvmArgs += ["--add-modules", "java.xml.bind"]
