--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -29,6 +29,7 @@ apply plugin: "docker"
 apply plugin: "org.springframework.boot"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
+// Standard Serin gradle plugin config
 apply from: "${rootDir}/../gradle/plugin-docker-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-jacoco-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-maven-publish-config.gradle"
