--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -33,6 +33,7 @@ apply plugin: "docker"
 apply plugin: "org.springframework.boot"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
+// Standard Serin gradle plugin config
 apply from: "${rootDir}/../gradle/plugin-docker-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-jacoco-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-maven-publish-config.gradle"
@@ -40,6 +41,13 @@ apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-spring-boot-config.gradle"
 apply from: "${rootDir}/../gradle/build-config.gradle"
 
+// Non-standard Serin gradle plugin config
+sonarqube {
+    properties {
+        // SonarQube will fail due to duplicate code across micro-services, however, this is legal. So we will exclude cpd for those classes
+        property "sonar.cpd.exclusions", "**/domain/**"
+    }
+}
 // Required for Java9
 //    tasks.withType(Test) {
 //        jvmArgs += ["--add-modules", "java.xml.bind"]
