--- a/thule-repository-mongodb/build.gradle
+++ b/thule-repository-mongodb/build.gradle
@@ -29,6 +29,7 @@ apply plugin: "docker"
 apply plugin: "org.springframework.boot"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
+// Standard Serin gradle plugin config
 apply from: "${rootDir}/../gradle/plugin-docker-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-jacoco-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-maven-publish-config.gradle"
@@ -36,7 +37,14 @@ apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-spring-boot-config.gradle"
 apply from: "${rootDir}/../gradle/build-config.gradle"
 
+// Non-standard Serin gradle plugin config
 bootRepackage.enabled = false // Don't need an "über-jar" but still want the rest of the spring boot plugin
+sonarqube {
+    properties {
+        // SonarQube will fail due to duplicate code across micro-services, however, this is legal. So we will exclude cpd for those classes
+        property "sonar.cpd.exclusions", "**/domain/**"
+    }
+}
 
 dependencies {
     compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
