--- a/gradle/plugin-jacoco-config.gradle
+++ b/gradle/plugin-jacoco-config.gradle
@@ -1,4 +1,3 @@
-jacoco.toolVersion = "0.7.9"
 jacocoTestCoverageVerification {
     violationRules {
         rule {
@@ -28,7 +27,9 @@ jacocoTestCoverageVerification {
             }
         }
     }
+    // Always create a report even if jacocoTestCoverageVerification fails
+    dependsOn jacocoTestReport
 }
-// Always create a report even if jacocoTestCoverageVerification fails
-jacocoTestCoverageVerification.dependsOn jacocoTestReport
+jacoco.toolVersion = "0.7.9"
+
 check.dependsOn jacocoTestCoverageVerification
