--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -5,8 +5,6 @@ buildscript {
     // Note: These dependencies must reside in a buildscript block that is *not* within a script plugin
     // see https://github.com/gradle/gradle/issues/1894
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
-        classpath("se.transmode.gradle:gradle-docker:1.2")
         classpath("uk.co.serin.gradle.plugins:sonarqube-build-breaker-plugin:1.0.0-SNAPSHOT") {
             changing = true
         }
@@ -21,6 +19,7 @@ buildscript {
 plugins {
     id "org.sonarqube" version "2.6.1"
     id "com.github.ben-manes.versions" version "0.17.0"
+    id "org.springframework.boot" version "1.5.8.RELEASE" apply(false)
 }
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
