--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -29,15 +29,16 @@ plugins {
     id "org.sonarqube" version "2.6.1"
     id "org.springframework.boot" version "1.5.8.RELEASE"
 }
+apply plugin: "io.spring.dependency-management"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
 // Standard Serin gradle plugin config
-apply from: "${rootDir}/../gradle/plugin-docker-config.gradle"
+apply from: "${rootDir}/../gradle/build-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-docker-with-spring-boot-1.5.x-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-jacoco-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-maven-publish-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
-apply from: "${rootDir}/../gradle/plugin-spring-boot-config.gradle"
-apply from: "${rootDir}/../gradle/build-config.gradle"
+apply from: "${rootDir}/../gradle/plugin-spring-boot-with-spring-boot-1.5.x-config.gradle"
 
 // Non-standard Serin gradle plugin config
 sonarqube {
