--- a/thule-edge-server/build.gradle
+++ b/thule-edge-server/build.gradle
@@ -23,21 +23,22 @@ plugins {
     id "java"
     id "maven-publish"
     id "org.sonarqube" version "2.6.1"
-    id "org.springframework.boot" version "1.5.8.RELEASE"
+    id "org.springframework.boot" version "2.0.0.M6"
 }
+apply plugin: "io.spring.dependency-management"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
 // Standard Serin gradle plugin config
+apply from: "${rootDir}/../gradle/build-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-docker-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-jacoco-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-maven-publish-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
 apply from: "${rootDir}/../gradle/plugin-spring-boot-config.gradle"
-apply from: "${rootDir}/../gradle/build-config.gradle"
 
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Dalston.SR3")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.M4")
     }
 }
 
@@ -48,9 +49,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-logging")
     compile("org.springframework.cloud:spring-cloud-starter-config")
-    compile("org.springframework.cloud:spring-cloud-starter-eureka")
+    compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
+    compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
     compile("org.springframework.cloud:spring-cloud-starter-sleuth")
-    compile('org.springframework.cloud:spring-cloud-starter-zuul')
     compile("org.springframework.cloud:spring-cloud-starter-zipkin")
     // Required to retry connecting to the discovery server when it is not available at startup
     compile("org.springframework.retry:spring-retry")
