--- a/thule-spring-boot-starters/settings.gradle
+++ b/thule-spring-boot-starters/settings.gradle
@@ -1,3 +1,23 @@
+pluginManagement {
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.namespace == "org.springframework") {
+                useModule("org.springframework.boot:spring-boot-gradle-plugin:" + requested.version)
+            }
+        }
+    }
+    repositories {
+        maven {
+            url "http://pooh:8081/repository/maven-public"
+            credentials {
+                username = "admin"
+                password = "admin123"
+            }
+        }
+        gradlePluginPortal()
+    }
+}
+
 rootProject.name = "thule-spring-boot-starters"
 
 include "thule-spring-boot-starter-test"
