--- a/thule-admin-server/src/itest/docker/docker-compose.yml
+++ b/thule-admin-server/src/itest/docker/docker-compose.yml
@@ -4,7 +4,9 @@ services:
   thule-admin-server:
     image: pooh.serin-consultancy.co.uk/thule-admin-server
     environment:
-      SPRING_CONFIG_LOCATION: file:/config/prod/,file:/config/itest/
+      EUREKA_CLIENT_ENABLED: "false"
+      SPRING_CLOUD_CONFIG_ENABLED: "false"
+      SPRING_CLOUD_CONFIG_FAILFAST: "false"
     extra_hosts:
       - docker-host:172.17.0.1
       - logstash-host:172.17.0.1
@@ -16,7 +18,3 @@ services:
       # Set localtime and timezone on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
-      # Set prod config
-      - ../../../../thule-config-service/src/main/resources/config/thule-admin-server:/config/prod:ro
-      # Set itest config to override any prod config
-      - ../resources:/config/itest:ro
