--- a/thule-cloud/src/itest/docker/docker-compose.yml
+++ b/thule-cloud/src/itest/docker/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
 
-  ################################  thule-edge-server  ################################
+  ################################  thule-email-server  ################################
   thule-email-service:
     image: pooh.serin-consultancy.co.uk/thule-email-service
     environment:
@@ -89,7 +89,7 @@ services:
       - docker-host:172.17.0.1
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
-    hostname: edge-server-1
+    hostname: email-server-1
     ports:
       - "8091:8091"
     volumes:
