--- a/thule-config-service/src/itest/docker/docker-compose.yml
+++ b/thule-config-service/src/itest/docker/docker-compose.yml
@@ -1,19 +1,17 @@
 version: "2"
 services:
-  ################################  thule-admin-server  ################################
-  thule-admin-server:
-    image: pooh.serin-consultancy.co.uk/thule-admin-server
+  ################################  thule-config-service  ################################
+  thule-config-service:
+    image: pooh.serin-consultancy.co.uk/thule-config-service
     environment:
       EUREKA_CLIENT_ENABLED: "false"
-      SPRING_CLOUD_CONFIG_ENABLED: "false"
-      SPRING_CLOUD_CONFIG_FAILFAST: "false"
     extra_hosts:
       - docker-host:172.17.0.1
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
-    hostname: admin-server-1
+    hostname: config-service-1
     ports:
-      - "8071:8071"
+      - "8888:8888"
     volumes:
       # Set localtime and timezone on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
