Changed gradle build to check for new snapshot versions

--- a/thule-cloud/build.gradle
+++ b/thule-cloud/build.gradle
@@ -39,6 +39,9 @@ bootJar.enabled = false // Don't need an "über-jar" but still want the rest of 
 jar.enabled = true // Don't need an "über-jar" but still want the rest of the spring boot plugin
 
 dependencies {
+    compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT") {
+        changing = true
+    }
     compile("org.apache.httpcomponents:httpclient")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-logging")
@@ -47,6 +50,8 @@ dependencies {
     }
     compile("org.springframework.boot:spring-boot-starter-jetty")
 
-    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
+    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT") {
+        changing = true
+    }
     testCompile("org.springframework.retry:spring-retry")
 }
