--- a/thule-admin-server/build.gradle
+++ b/thule-admin-server/build.gradle
@@ -43,22 +43,25 @@ dependencyManagement {
 }
 
 dependencies {
-    compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
+    compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT") {
+        changing = true
+    }
     compile("de.codecentric:spring-boot-admin-server:1.5.5")
     compile("de.codecentric:spring-boot-admin-server-ui:1.5.5")
     compile("net.logstash.logback:logstash-logback-encoder:4.11")
     compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
     compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile("org.springframework.boot:spring-boot-starter-logging")
     // Without aop, spring-retry will not work, see https://github.com/spring-projects/spring-retry/issues/52
     compile("org.springframework.boot:spring-boot-starter-aop")
     compile("org.springframework.cloud:spring-cloud-starter-config")
+    compile("org.springframework.boot:spring-boot-starter-logging")
     compile("org.springframework.cloud:spring-cloud-starter-eureka")
     compile("org.springframework.cloud:spring-cloud-starter-sleuth")
     compile("org.springframework.cloud:spring-cloud-starter-zipkin")
     // Required to retry connecting to the discovery server when it is not available at startup
     compile("org.springframework.retry:spring-retry")
 
-    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
+    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT") {
+        changing = true
+    }
 }
-
