--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -43,7 +43,9 @@ dependencyManagement {
 }
 
 dependencies {
-    compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
+    compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT") {
+        changing = true
+    }
     compile("net.logstash.logback:logstash-logback-encoder:4.11")
     compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
     compile("org.springframework.boot:spring-boot-starter-actuator")
@@ -56,6 +58,8 @@ dependencies {
     // Required to retry connecting to the discovery server when it is not available at startup
     compile("org.springframework.retry:spring-retry")
 
-    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
+    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT") {
+        changing = true
+    }
     testCompile("com.bitmechanic:dumbster:1.9.0.2")
 }
