--- a/thule-cloud/src/itest/docker/docker-compose.yml
+++ b/thule-cloud/src/itest/docker/docker-compose.yml
@@ -4,17 +4,18 @@ services:
   thule-admin-server:
     image: pooh.serin-consultancy.co.uk/thule-admin-server
     environment:
-      CONFIG_HOST: docker-host
-      CONFIG_PORT: 8888
-      EUREKA_HOST: docker-host
-      EUREKA_PORT: 8761
+      THULE_CONFIG_SERVICE_HOST: thule-config-service-host
+      THULE_DISCOVERY_SERVICE_HOST: thule-discovery-service-host
     extra_hosts:
       - docker-host:172.17.0.1
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: admin-server-1
+    links:
+      - thule-config-service:thule-config-service-host
+      - thule-discovery-service:thule-discovery-service-host
     ports:
-      - "8071:8071"
+      - "9071:8071"
     volumes:
       # Set localtime and timezone on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
@@ -24,16 +25,15 @@ services:
   thule-config-service:
     image: pooh.serin-consultancy.co.uk/thule-config-service
     environment:
-      EUREKA_HOST: docker-host
-      EUREKA_PORT: 8761
-      SERVER_PORT: 8888
+      THULE_DISCOVERY_SERVICE_HOST: docker-host
+      THULE_DISCOVERY_SERVICE_PORT: 9761
     extra_hosts:
       - docker-host:172.17.0.1
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: config-service-1
     ports:
-      - "8888:8888"
+      - "9888:8888"
     volumes:
       # Set localtime and timezone on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
@@ -43,15 +43,15 @@ services:
   thule-discovery-service:
     image: pooh.serin-consultancy.co.uk/thule-discovery-service
     environment:
-      CONFIG_HOST: docker-host
-      CONFIG_PORT: 8888
+      THULE_CONFIG_SERVICE_HOST: docker-host
+      THULE_CONFIG_SERVICE_PORT: 9888
     extra_hosts:
       - docker-host:172.17.0.1
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: discovery-service-1
     ports:
-      - "8761:8761"
+      - "9761:8761"
     volumes:
       # Set localtime and timezone on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
@@ -61,17 +61,18 @@ services:
   thule-edge-server:
     image: pooh.serin-consultancy.co.uk/thule-edge-server
     environment:
-      CONFIG_HOST: docker-host
-      CONFIG_PORT: 8888
-      EUREKA_HOST: docker-host
-      EUREKA_PORT: 8761
+      THULE_CONFIG_SERVICE_HOST: thule-config-service-host
+      THULE_DISCOVERY_SERVICE_HOST: thule-discovery-service-host
     extra_hosts:
       - docker-host:172.17.0.1
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: edge-server-1
+    links:
+      - thule-config-service:thule-config-service-host
+      - thule-discovery-service:thule-discovery-service-host
     ports:
-      - "8080:8080"
+      - "9080:8080"
     volumes:
       # Set localtime and timezone on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
@@ -81,17 +82,18 @@ services:
   thule-email-service:
     image: pooh.serin-consultancy.co.uk/thule-email-service
     environment:
-      CONFIG_HOST: docker-host
-      CONFIG_PORT: 8888
-      EUREKA_HOST: docker-host
-      EUREKA_PORT: 8761
+      THULE_CONFIG_SERVICE_HOST: thule-config-service-host
+      THULE_DISCOVERY_SERVICE_HOST: thule-discovery-service-host
     extra_hosts:
       - docker-host:172.17.0.1
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: email-server-1
+    links:
+      - thule-config-service:thule-config-service-host
+      - thule-discovery-service:thule-discovery-service-host
     ports:
-      - "8091:8091"
+      - "9091:8091"
     volumes:
       # Set localtime and timezone on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
@@ -101,17 +103,18 @@ services:
   thule-people-service:
     image: pooh.serin-consultancy.co.uk/thule-people-service
     environment:
-      CONFIG_HOST: docker-host
-      CONFIG_PORT: 8888
-      EUREKA_HOST: docker-host
-      EUREKA_PORT: 8761
+      THULE_CONFIG_SERVICE_HOST: thule-config-service-host
+      THULE_DISCOVERY_SERVICE_HOST: thule-discovery-service-host
     extra_hosts:
       - docker-host:172.17.0.1
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: people-service-1
+    links:
+      - thule-config-service:thule-config-service-host
+      - thule-discovery-service:thule-discovery-service-host
     ports:
-      - "8090:8090"
+      - "9090:8090"
     volumes:
       # Set localtime and timezone on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
