--- a/thule-email-service/src/main/resources/bootstrap.yml
+++ b/thule-email-service/src/main/resources/bootstrap.yml
@@ -20,4 +20,4 @@ spring:
         maxAttempts: 9999
         initialInterval: 3000
       # Location of the config service
-      uri: http://${config.host:localhost}:${config.port:8888}/
+      uri: http://${thule.config.service.host:localhost}:${thule.config.service.port:8888}/
