Upgraded de.codecentric:spring-boot-admin-server [1.5.5 -> 1.5.6] and de.codecentric:spring-boot-admin-server-ui [1.5.5 -> 1.5.6]

--- a/thule-admin-server/build.gradle
+++ b/thule-admin-server/build.gradle
@@ -38,7 +38,7 @@ apply from: "${rootDir}/../gradle/plugin-spring-boot-with-spring-boot-1.5.x-conf
 
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Dalston.SR4")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Edgware.RELEASE")
     }
 }
 
