--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -54,7 +54,7 @@ sonarqube {
 
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Dalston.SR3")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Edgware.RELEASE")
     }
 }
 
