--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -45,10 +45,10 @@ subprojects {
 project("thule-spring-boot-starter-test") {
     dependencies {
         compile project(":thule-test")
-        compile("com.github.tomakehurst:wiremock:2.14.0")
         compile("nl.jqno.equalsverifier:equalsverifier:2.4.2")
         compile("org.awaitility:awaitility:3.0.0")
         compile("org.springframework.boot:spring-boot-starter-test")
+        compile("org.springframework.cloud:spring-cloud-contract-wiremock:1.2.2.RELEASE")
         compile("pl.pojo:pojo-tester:0.7.6")
     }
 }
