--- a/thule-config-service/src/itest/docker/docker-compose.yml
+++ b/thule-config-service/src/itest/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.5"
 services:
   ################################  thule-config-service  ################################
   thule-config-service:
-    image: pooh.serin-consultancy.co.uk/thule-config-service
+    image: pooh:8082/thule-config-service
     environment:
       EUREKA_CLIENT_ENABLED: "false"
     extra_hosts:
