Added TZ data to docker-compose.yml files

--- a/thule-discovery-service/src/itest/docker/docker-compose.yml
+++ b/thule-discovery-service/src/itest/docker/docker-compose.yml
@@ -6,13 +6,13 @@ services:
     environment:
       SPRING_CLOUD_CONFIG_ENABLED: "false"
       SPRING_CLOUD_CONFIG_FAILFAST: "false"
+      TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: discovery-service-1
     ports:
-      - "8761:8761"
+      - 8761:8761
     volumes:
-      # Set localtime and timezone on container to be the same as the host
+      # Set localtime on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
