--- a/thule-cloud/src/itest/docker/docker-compose.yml
+++ b/thule-cloud/src/itest/docker/docker-compose.yml
@@ -6,48 +6,48 @@ services:
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-cloud-config-service
       THULE_DISCOVERY_SERVICE_HOST: thule-cloud-discovery-service
+      TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: admin-server-1
     ports:
-      - "9071:8071"
+      - 9071:8071
     volumes:
-      # Set localtime and timezone on container to be the same as the host
+      # Set localtime on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
 
   ################################  thule-config-service  ################################
   thule-cloud-config-service:
     image: pooh:8082/thule-config-service
     environment:
       THULE_DISCOVERY_SERVICE_HOST: thule-cloud-discovery-service
+      TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: config-service-1
     ports:
-      - "9888:8888"
+      - 9888:8888
     volumes:
-      # Set localtime and timezone on container to be the same as the host
+      # Set localtime on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
 
   ################################  thule-discovery-service  ################################
   thule-cloud-discovery-service:
     image: pooh:8082/thule-discovery-service
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-cloud-config-service
+      TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: discovery-service-1
     ports:
-      - "9761:8761"
+      - 9761:8761
     volumes:
-      # Set localtime and timezone on container to be the same as the host
+      # Set localtime on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
 
   ################################  thule-edge-server  ################################
   thule-cloud-edge-server:
@@ -55,16 +55,16 @@ services:
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-cloud-config-service
       THULE_DISCOVERY_SERVICE_HOST: thule-cloud-discovery-service
+      TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: edge-server-1
     ports:
-      - "9080:8080"
+      - 9080:8080
     volumes:
-      # Set localtime and timezone on container to be the same as the host
+      # Set localtime on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
 
   ################################  thule-email-server  ################################
   thule-cloud-email-service:
@@ -72,16 +72,16 @@ services:
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-cloud-config-service
       THULE_DISCOVERY_SERVICE_HOST: thule-cloud-discovery-service
+      TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: email-server-1
     ports:
-      - "9091:8091"
+      - 9091:8091
     volumes:
-      # Set localtime and timezone on container to be the same as the host
+      # Set localtime on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
 
   ################################  thule-people-service  ################################
   thule-cloud-people-service:
@@ -89,13 +89,13 @@ services:
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-cloud-config-service
       THULE_DISCOVERY_SERVICE_HOST: thule-cloud-discovery-service
+      TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: people-service-1
     ports:
-      - "9090:8090"
+      - 9090:8090
     volumes:
-      # Set localtime and timezone on container to be the same as the host
+      # Set localtime on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
