--- a/thule-config-service/src/itest/docker/docker-compose.yml
+++ b/thule-config-service/src/itest/docker/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     image: pooh:8082/thule-config-service
     environment:
       EUREKA_CLIENT_ENABLED: "false"
+      TZ: Europe/London
     extra_hosts:
       - logstash-host:172.17.0.1
       - zipkin-host:172.17.0.1
     hostname: config-service-1
     ports:
-      - "8888:8888"
+      - 8888:8888
     volumes:
-      # Set localtime and timezone on container to be the same as the host
+      # Set localtime on container to be the same as the host
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
