Added TZ data to docker-compose.yml files

--- a/gradle/plugin-sonarqube-config.gradle
+++ b/gradle/plugin-sonarqube-config.gradle
@@ -2,6 +2,6 @@ sonarqube {
     properties {
         property "sonar.host.url", "http://pooh:9000"
         property "sonar.scm.disabled", "true"
-        property "sonar.projectName", project.description
+        property "sonar.projectName", project.description + " [" + project.name + "]"
     }
 }
