--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -5,9 +5,7 @@ buildscript {
     // Note: These dependencies must reside in a buildscript block that is *not* within a script plugin
     // see https://github.com/gradle/gradle/issues/1894
     dependencies {
-        classpath("uk.co.serin.gradle.plugins:sonarqube-build-breaker-plugin:1.0.0-SNAPSHOT") {
-            changing = true
-        }
+        classpath("uk.co.serin.gradle.plugins:sonarqube-build-breaker-plugin:1.0.0-SNAPSHOT") { changing = true }
     }
 
     // Changing modules are cached by default for 24 hours, change the default to never and mark snapshots as changing (must be within the buildscript)
@@ -27,6 +25,7 @@ subprojects {
     apply plugin: "jacoco"
     apply plugin: "java"
     apply plugin: "maven-publish"
+    apply plugin: "org.sonarqube"
     apply plugin: "org.springframework.boot"
     apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
